<resources>
    <string name="app_name">MarketPlace</string>

    <!-- TODO: Remove or change this placeholder text (or keep it as an easter egg for the grader to find it later) -->

    <!--Login Page-->
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="signed_out">Signed Out</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="sign_in">Sign In</string>

    <!--Main Activity-->

    <!--Market Feed-->
    <string name="Create_Post">Create Post</string>
    <string name="sort_by_distance">sort by distance</string>
    <string name="sort_by_price">sort by price</string>
    <string-array name="categories_including_all_categories_option">
        <item>All Categories</item>
        <item>Textbook</item>
        <item>Furniture</item>
        <item>Electronics</item>
        <item>Other</item>
    </string-array>

    <!--User's Profile-->
    <string name="Image_Description">User\'s Photo</string>
    <string name="User_Name">User\'s Name</string>
    <string name="User_Email">User\'s Email</string>
    <string name="User_Uni">User\'s University</string>
    <string name="Preferences_Button">Preferences</string>


    <!--NavBar-->
    <string name="P_button">P</string>
    <string name="C_button">C</string>
    <string name="Search_Line">Search</string>
    <string name="S_button">S</string>
    <string name="Feed_button">Feed</string>

    <!--Post Form-->
    <string name="Item_Name">Item Name</string>
    <string name="Ask_Price">Asking Price</string>
    <string name="Item_Zip">Item Zipcode</string>
    <string name="add_Picture">add Picture</string>
    <string name="Desc_Text">Item Description</string>
    <string name="Post_Item">Post Item</string>
    <string-array name="categories">
        <item>Textbook</item>
        <item>Furniture</item>
        <item>Electronics</item>
        <item>Other</item>
    </string-array>
    <string-array name="itemConditions">
        <item>Great Condition</item>
        <item>Good Condition</item>
        <item>Decent Condition</item>
        <item>Poor Condition</item>
    </string-array>

    <!--Chat stuff-->
    <string name="chatlist">Chat List</string>
    <string name="chatroom">Chat Room</string>
    <string name="sendbutton">send</string>

    <!--Market Feed Row-->
    <string name="post_name">Post Name</string>
    <string name="item_pic">Picture of the Item</string>
    <string name="price">Price:</string>
    <string name="textview">TextView</string>
    <string name="apply">Apply</string>

    <!--Fragment View Post-->
    <string name="contact_seller">contact seller</string>
    <string name="delete_post">delete post</string>
    <string name="view_post_title">Title </string>
    <string name="view_post_price">Price </string>
    <string name="view_post_condition">Condition </string>
    <string name="view_post_description">Description </string>
    <string name="eBay_suggested_price">eBay-suggested Price </string>

    <!--Preference-->
    <string name="change_name">Change Name</string>
    <string name="change_university">Change University</string>
    <string name="change_zipcode">Change Zip code</string>
    <string name="change_search_radius">Change Search radius</string>
    <string name="hint_input_name">What is your name?</string>
    <string name="hint_input_university">Where do you study?</string>
    <string name="hint_input_zipcode">What is your zip code?</string>
    <string name="hint_input_radius">How far do you search?</string>

    <!--Other-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="label_generic_idp">Generic IDP Auth</string>
    <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt">Microsoft User: %s</string>
    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>
    <string name="ItemCategorySpinner">ItemCategorySpinner</string>
    <string name="overall_rating">Overall Rating:</string>
    <string name="all_user_s_posts">All User\'s Posts</string>
    <string name="please_rate_this_user">Please Rate this User</string>
    <string name="give_your_rating_for_this_user">Give your rating for this user?</string>
    <string name="amazon">Amazon</string>
    <string name="ebay">Ebay</string>

</resources>
