<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavBarFragment">

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/P_button" />

    <Button
        android:id="@+id/btnChat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/C_button" />

    <EditText
        android:id="@+id/txtSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:autofillHints=""
        android:hint="@string/Search_Line"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/S_button" />

    <Button
        android:id="@+id/btnFeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:text="@string/Feed_button" />

</LinearLayout>