<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_weight="3"
            android:src="@drawable/img" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/User_Name" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/User_Email" />

            <TextView
                android:id="@+id/txtUni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <Button
                android:id="@+id/btnPreferences"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/Preferences_Button" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/users_ratring" />

            <RatingBar
                android:id="@+id/rbUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtStars"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:gravity="center_vertical"
                android:text="@string/overall_rating" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtPosts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/all_user_s_posts" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7" />

</LinearLayout>