<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

<!--        <ImageView-->
<!--            android:id="@+id/icon"-->
<!--            style="@style/ThemeOverlay.FirebaseIcon"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:contentDescription="@string/desc_firebase_lockup"-->
<!--            android:src="@drawable/firebase_lockup_400" />-->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            app:srcCompat="@drawable/ic_stat_name" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:theme="@style/ThemeOverlay.MyTitleText" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_in"
            android:visibility="visible" />

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
